# python-meridian-energy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/meridian_energy/: __init__.py  api.py  auth.py  cli.py  const.py  errors.py  models.py  queries.py
tests/: test_api.py  test_auth.py  test_models.py
tests/fixtures/: accounts.json  firebase_refresh.json  firebase_signin.json  measurements_consumption.json  measurements_generation.json  otp_request_ok.json  otp_verify_ok.json
