[project]
name = "meridian-energy"
version = "0.1.1"
description = "Python client for the Meridian Energy (NZ) customer GraphQL API"
authors = [{ name = "Brian Thorne", email = "brian@hardbyte.nz" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["meridian", "energy", "new-zealand", "home-assistant", "graphql"]
urls = { repository = "https://github.com/hardbyte/python-meridian-energy", issues = "https://github.com/hardbyte/python-meridian-energy/issues" }

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0,<3.0",
    "rich>=13.0",
]

[project.scripts]
meridian = "meridian_energy.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.12",
    "ty>=0.0.1a",
    "pytest>=8.0,<10.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_energy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
